--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,7 @@
     }
    ],
    "source": [
+    "## Quesion 1 \n",
     "import requests\n",
     "\n",
     "url = 'https://www.npr.org/2025/06/28/nx-s1-5449648/j-m-smucker-plans-to-remove-artificial-colors-from-its-jams-and-other-products'\n",
